--- a/bs-aws.opam
+++ b/bs-aws.opam
@@ -1,8 +1,8 @@
 opam-version: "2.0"
 name: "bs-aws"
-synopsis: "an incomplete interface to Amazon Web Services"
+synopsis: "An incomplete interface to Amazon Web Services"
 description: "an incomplete interface to Amazon Web Services"
-version: "0.6"
+version: "1.0"
 maintainer: "Jan Rochel <jan@rochel.info>"
 authors: [ "Jerôme Vouillon"
            "Jan Rochel" ]
@@ -10,19 +10,7 @@ license: "LGPL with OCaml linking exception"
 homepage: "https://github.com/besport/bs-aws"
 dev-repo: "git+https://github.com/besport/bs-aws.git"
 bug-reports: "https://github.com/besport/bs-aws/issues"
-build: [
-  ["oasis" "setup"]
-  ["ocaml" "setup.ml" "-configure" "--prefix" prefix]
-  ["ocaml" "setup.ml" "-build"]
-  ["oasis" "setup"] {with-test}
-  ["ocaml" "setup.ml" "-configure" "--enable-tests"] {with-test}
-  ["ocaml" "setup.ml" "-build"] {with-test}
-  ["ocaml" "setup.ml" "-test"] {with-test}
-]
-install: ["ocaml" "setup.ml" "-install"]
-remove: [
-  ["ocamlfind" "remove" "bs-aws"]
-]
+build: [["dune" "build" "-p" name "-j" jobs]]
 depends: [
   "ocaml" {>= "4.01"}
   "base-threads"
@@ -30,7 +18,6 @@ depends: [
   "cryptokit"
   "lwt"
   "lwt_ppx"
-  "oasis" {build & >= "0.4"}
   "ocamlbuild" {build}
   "ocamlfind" {build}
   "cohttp-lwt-unix" {>= "1.0"}
@@ -38,5 +25,5 @@ depends: [
   "yojson" {>= "1.6"}
   "xmlm"
   "ezxmlm"
+  "dune" {>= "1.11"}
 ]
-flags: light-uninstall
