--- a/lib/dune
+++ b/lib/dune
@@ -4,4 +4,5 @@
  (libraries lwt lwt_ppx cohttp-lwt-unix xmlm ezxmlm yojson cryptokit)
  (preprocess (pps lwt_ppx))
  (modules Aws_base Aws_credentials Aws_lambda Aws_rds Aws_s3 Aws_signature Aws_sqs Aws_common Aws_elastic_transcoder Aws_mediaconvert Aws_request Aws_ses Aws_sns)
+ (flags (:standard -w -9))
 )
