--- a/lib/dune
+++ b/lib/dune
@@ -5,6 +5,6 @@
  (preprocess (pps lwt_ppx))
  (private_modules Signature)
  (modules Base Credentials Service Lambda Rds S3 Signature Sqs Common
-          Elastic_transcoder Mediaconvert Request Ses Sns Elasticsearch)
+          Elastic_transcoder Mediaconvert Request Ses Sns Elasticsearch Cloudwatch)
  (flags (:standard -w -9))
 )
