--- a/lib/dune
+++ b/lib/dune
@@ -6,5 +6,5 @@
  (private_modules Signature)
  (modules Base Credentials Service Lambda Rds S3 Signature Sqs Ssm Common
           Elastic_transcoder Mediaconvert Request Ses Sns Elasticsearch Cloudwatch)
- (flags (:standard -w -9))
+ (flags (:standard -w -9-16))
 )
